--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -7,7 +7,7 @@
     "deploy": "wrangler deploy"
   },
   "dependencies": {
-    "platforms-sdk": "*"
+    "platforms-sdk": "^0.1.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250109.0",
